--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 <ol>
   <li>Spread butter on bread and frying pan</li>
   <li> Place bread in frying pan and fry</li>
-  <li></li>Add cheese on top of bread, Cover with second slice of bread, Turn over and fry for 2 minutes</li>
+  <li>Add cheese on top of bread</li>
+  <li></li>Cover with second slice of bread, Turn over and fry for 2 minutes</li>
 </ol>
 </body>
 </html>
